--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,27 @@
 <html>
 <head>
   <title>F-1 Feeder</title>
+    <link href="http://rboaventura.com/f1feeder/css/bootstrap_include.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/buttons.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/navs.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/search.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/form_elements.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/layout.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/breadcrumbs.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/badges.css" media="screen" rel="stylesheet" type="text/css" />
+
+
+    <link href="http://rboaventura.com/f1feeder/css/fixes.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/typography.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/widgets/avatar.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/docs.css" media="screen" rel="stylesheet" type="text/css" />
+
+    <link href="http://rboaventura.com/f1feeder/css/responsive-max1024.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/responsive-max768.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="http://rboaventura.com/f1feeder/css/responsive-max480.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="styles/main.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 
 <body ng-app="F1FeederApp">
